Updated self clint

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=THIRDEYE30-MESSAGEBROKER
 server.port=${PORT:8006}
+self.url=${CURRENT_URL:}
+
 thirdeye.timezone = Asia/Kolkata
 thirdeye.uniqueId = ${UNIQUE_ID}
 thirdeye.uniqueCode = ${UNIQUE_CODE}
