--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,8 @@ thirdeye.uniqueId = ${UNIQUE_ID}
 thirdeye.uniqueCode = ${UNIQUE_CODE}
 thirdeye.maximumqueuesize=1000
 thirdeye.maximumqueues=10
-thirdeye.scheduler.cronToRefreshData=0 1 0 * * *
+thirdeye.scheduler.cronToRefreshData=0 0 0 * * *
+thirdeye.priority = 2
 
 eureka.client.service-url.defaultZone=${SERVER_URL:}
 eureka.client.register-with-eureka=true
