updated eureka sequrity

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,7 @@ thirdeye.maximumqueuesize=1000
 thirdeye.maximumqueues=10
 thirdeye.scheduler.cronToRefreshData=0 0 0 * * *
 thirdeye.priority = 2
+thirdeye.api.key=${THIRDEYE_API_KEY}
 
 eureka.client.service-url.defaultZone=${SERVER_URL:}
 eureka.client.register-with-eureka=true
