--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,25 +1,14 @@
 spring.application.name=THIRDEYE30-MESSAGEBROKER
-server.port=${PORT:8006}
-self.url=${CURRENT_URL:}
-
+spring.profiles.active=${PROFILE}
 thirdeye.timezone = Asia/Kolkata
-thirdeye.uniqueId = ${UNIQUE_ID}
-thirdeye.uniqueCode = ${UNIQUE_CODE}
 thirdeye.maximumqueuesize=1000
 thirdeye.maximumqueues=10
 thirdeye.scheduler.cronToRefreshData=0 0 0 * * *
 thirdeye.priority = 2
 thirdeye.api.key=${THIRDEYE_API_KEY}
-
-eureka.client.service-url.defaultZone=${SERVER_URL:}
+eureka.client.service-url.defaultZone=${SERVER_URL}
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 eureka.instance.instance-id=${spring.application.name}:${server.port}
-eureka.instance.hostname=${RENDER_EXTERNAL_HOSTNAME}
-eureka.instance.prefer-ip-address=false
-eureka.instance.secure-port-enabled=true
-eureka.instance.secure-port=443
-eureka.instance.non-secure-port-enabled=true
-
 thirdeye.istesting = ${IS_TESTING}
 thirdeye.istesting.code = ${TESTING_CODE}
